refined per review comments
